prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_15.zkc
//error:3:11-17:unknown symbol
fn f12345(c:u8) {
   var xs:[u8;c]
   //
}
